--- a/config.yaml
+++ b/config.yaml
@@ -3,4 +3,6 @@ heap_space: 90
 cluster_tag: BC    # Used to store barcode cluster id in bam file. 'BX' is 10x genomic default
 sequence_tag: RX    # Used to store original barcode sequence in bam file. 'RX' is 10x genomic default
 bowtie2_reference: .   #Fill in /path/to/bowtie2_reference
+bwa_mem_reference: .   #Fill in /path/to/bwa_mem_reference
 picard_command: picard
+mapping: bowtie2 # Which mapping tool to use. Options are: bowtie2 and bwa-mem
